<resources>
    <string name="app_name">Undergraduates\' Attitude</string>
    <string name="welcome_message">Welcome, this is your assistance for achieving optimal Attitude during the entire week</string>
    <string name="create_profile">Create Profile</string>
    <string name="add">Add</string>
    <string name="add_course">Add Course</string>
    <string name="add_semedter_courses">Add Semester Courses</string>
    <string name="add_activity">Add Activity</string>
    <string name="add_activities">Add Activities</string>
    <string name="report">Report</string>
    <string name="main">Main</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="college">College</string>
    <string name="department">Department</string>
    <string name="academic_year">Academic Year</string>
    <string name="category">Category</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="activity_added_successfully">Activity Added Successfully</string>
    <string name="get_current_week_report">Get Current Week Report</string>
    <string name="compare_current_vs_previous">Compare Current VS Previous</string>
    <string name="show_previous_weeks_report">Show Previous Weeks Reports</string>
    <string name="submain">Main</string>
</resources>
